--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -62,9 +62,13 @@
         <url-pattern>/*</url-pattern>
     </filter-mapping>
 
-
     <filter-mapping>
         <filter-name>CharacterEncodingFilter</filter-name>
         <url-pattern>/*</url-pattern>
     </filter-mapping>
+
+    <!--监听器实现用户访问记录-->
+    <listener>
+        <listener-class>cn.blogss.listener.VisitTimesListener</listener-class>
+    </listener>
 </web-app>
