--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -10,8 +10,7 @@
     <!--Spring应用上下文，理解层次化的ApplicationContext-->
     <context-param>
         <param-name>contextConfigLocation</param-name>
-        <param-value>classpath:spring/applicationContext-*.xml;
-            classpath:spring/spring-redis.xml;classpath:spring/spring-shiro.xml</param-value>
+        <param-value>classpath:spring/spring-*.xml;</param-value>
     </context-param>
     <listener>
         <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
